# conformance-tests

./: .gitignore  README.md  pyproject.toml
context_passport_conformance.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
runner/python/: run.py
vectors/required/: v01_root_commit.json  v02_chained_commit.json  v03_canonical_payload.json  v04_broken_chain.json  v05_schema_version.json  v06_unknown_extension.json
vectors/signed/: v07_ed25519_valid.json  v08_ed25519_tampered.json  v09_signature_canonicalization.json
